# law-archive-data

./: pyproject.toml
data/: stb-judgments.json  stb-judgments.txt  strata-title-board-judgments.json
input/strata/: judgments.py
