[tool.poetry]
name = "law-archive-data"
version = "0.0.1"
description = ""
authors = ["Huey <hello@huey.xyz>"]
license = "EUPL-1.2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
git-history = "0.7a0"
b2 = "^3.10.1"
requests = "^2.31.0"
beautifulsoup4 = "4.8.0"
argcomplete = "^3.1.2"
pypdf = "^3.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
